manifests/jenkins/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: praveensathelli11-dev
spec:
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: agent
      port: 50000
      targetPort: 50000
      protocol: TCP
  type: ClusterIP
