manifests/jenkins/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
  namespace: praveensathelli11-dev
spec:
  to:
    kind: Service
    name: jenkins
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
